--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Favicon (all browsers will pick one of these sizes) -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicons/flickpick-32.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicons/flickpick-192.png" />
+    <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/favicons/flickpick-512.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FlickPick</title>
   </head>
